--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ atom_feed:
 author:
   name             : "한재원"
   avatar           :  "/assets/img/psa.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "🛠️ 무작정 삽질해서라도 성장하려는 웹 개발자(희망)입니다."
+  bio              : "🛠️ 저는 커서 백엔드 개발자가 될래요!"
   location         : #"Somewhere"
   email            : #
   links:
