spring 요청 흐름 포스팅

--- a/_config.yml
+++ b/_config.yml
@@ -155,7 +155,7 @@ social:
   links: # An array of links to social media profiles
 
 
-# ------------------------------------------------  (분석? 뭔지모름) ---------------------------------------------------------
+# ------------------------------------------------  ( Google Analytics ) ---------------------------------------------------------
 analytics:
   provider               : "google-gtag"  # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
