--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ defaults:
 permalink: /:categories/:title/
 paginate: 15 # 몇개까지 보여줄래?
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Seoul # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 
